--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </style>
   <script src="p5js/p5.min.js"></script>
   <script src="p5js/addons/p5.sound.min.js"></script>
+  <script src="game_engine.js"></script>
+  <script src="screen.js"></script>
   <script src="sketch.js"></script>
 </head>
 
