--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     }
   </style>
   <script src="p5js/p5.min.js"></script>
+  <script src="game.js"></script>
   <script src="sketch.js"></script>
 </head>
 
