--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="p5js/p5.min.js"></script>
   <script src="animation.js"></script>
   <script src="game.js"></script>
+  <script src="helper.js"></script>
   <script src="sketch.js"></script>
 </head>
 
