--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="animation.js"></script>
   <script src="game.js"></script>
   <script src="helper.js"></script>
+  <script src="level.js"></script>
   <script src="sketch.js"></script>
 </head>
 
