Split classes into separate files.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
       background-color: #1b1b1b;
     }
   </style>
-  <script src="p5js/p5.min.js"></script>
   <script src="animation.js"></script>
+  <script src="attacker.js"></script>
+  <script src="character.js"></script>
+  <script src="collectible.js"></script>
+  <script src="defender.js"></script>
   <script src="game.js"></script>
   <script src="helper.js"></script>
   <script src="level.js"></script>
+  <script src="p5js/p5.min.js"></script>
+  <script src="projectile.js"></script>
   <script src="sketch.js"></script>
 </head>
 
