--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="attacker.js"></script>
   <script src="character.js"></script>
   <script src="collectible.js"></script>
+  <script src="config.js"></script>
   <script src="defender.js"></script>
   <script src="game.js"></script>
   <script src="helper.js"></script>
