--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="character.js"></script>
   <script src="collectible.js"></script>
   <script src="config.js"></script>
+  <script src="config_helper.js"></script>
   <script src="defender.js"></script>
   <script src="game.js"></script>
   <script src="helper.js"></script>
