--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="p5js/p5.min.js"></script>
   <script src="projectile.js"></script>
   <script src="sketch.js"></script>
+  <script src="store.js"></script>
 </head>
 
 <body>
