--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="config_helper.js"></script>
   <script src="defender.js"></script>
   <script src="game.js"></script>
+  <script src="game_map.js"></script>
   <script src="helper.js"></script>
   <script src="level.js"></script>
   <script src="p5js/p5.min.js"></script>
