--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="helper.js"></script>
   <script src="level.js"></script>
   <script src="p5js/p5.min.js"></script>
+  <script src="p5js/addons/p5.sound.min.js"></script>
   <script src="projectile.js"></script>
   <script src="sketch.js"></script>
   <script src="store.js"></script>
