Restructure file locations to make things look cleaner than they are.

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
       background-color: #1b1b1b;
     }
   </style>
-  <script src="animation.js"></script>
-  <script src="attacker.js"></script>
-  <script src="collectible.js"></script>
-  <script src="config.js"></script>
-  <script src="config_helper.js"></script>
-  <script src="defender.js"></script>
-  <script src="game.js"></script>
-  <script src="game_map.js"></script>
-  <script src="helper.js"></script>
-  <script src="level.js"></script>
+  <script src="libs/animation.js"></script>
+  <script src="libs/attacker.js"></script>
+  <script src="libs/collectible.js"></script>
+  <script src="libs/config_helper.js"></script>
+  <script src="libs/defender.js"></script>
+  <script src="libs/game.js"></script>
+  <script src="libs/game_map.js"></script>
+  <script src="libs/helper.js"></script>
+  <script src="libs/level.js"></script>
+  <script src="libs/projectile.js"></script>
+  <script src="libs/store.js"></script>
   <script src="p5js/p5.min.js"></script>
   <script src="p5js/addons/p5.sound.min.js"></script>
-  <script src="projectile.js"></script>
+  <script src="config.js"></script>
   <script src="sketch.js"></script>
-  <script src="store.js"></script>
 </head>
 
 <body>
